frontends/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dashboard
  namespace: core
spec:
  selector:
    matchLabels:
      app: frontend-dashboard
  template:
    metadata:
      labels:
        app: frontend-dashboard
    spec:
      containers:
        - name: frontend-dashboard
          image: aditirvan/istio-sample-app:dashboard
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "68Mi"
              cpu: "10m"
          ports:
            - containerPort: 8080
