frontends/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-dashboard-svc
  namespace: core
spec:
  selector:
    app: frontend-dashboard
  ports:
  - port: 80
    targetPort: 8080
