frontends/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # menentukan image yang di gunakan, check di Lens bagian Services -> istio-ingressgateway -> Labels
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "marketplace.local" # host name
