frontends/virtual-service-fe.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe
  namespace: istio-system
spec:
  hosts:
  - "marketplace.local"
  gateways:
  - frontend-gateway
  http:
  - name: "dashboard"
    route: 
    - destination:
        # port:
        #   number: 8000 # jika port nya `80` tidak perlu define key `port`
        host: frontend-dashboard-svc.core.svc.cluster.local
